# workflo

./: .dockerignore  .env.example  Dockerfile  Makefile  README.md  docker-compose.yml  main.py  pyproject.toml  sample_workflow.json
app/: celery_app.py  config.py  main.py  tasks.py
app/api/: routes.py
app/engine/: dag.py  executor.py
app/engine/handlers/: delay.py  noop.py  transform.py
app/plugins/: loader.py  registry.py
app/schemas/: run.py  workflow.py
app/store/: redis_store.py
examples/: sample_plugin_workflow.json  sample_search_to_story_workflow.json  sample_web_search_workflow.json
registry/: Dockerfile  publish.py
