[project]
name = "workflow-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "boto3>=1.43.23",
    "celery[redis]>=5.6.3",
    "fastapi>=0.136.3",
    "pydantic>=2.13.4",
    "pydantic-settings>=2.14.1",
    "redis>=6.4.0",
    "uvicorn[standard]>=0.49.0",
]
